--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eiskaltdcpp-web (1.0.1-0ppa1~focal1) focal; urgency=medium
+
+  * New stable release.
+
+ -- Boris Pek <tehnick@debian.org>  Sat, 25 Jan 2020 19:09:39 +0300
+
 eiskaltdcpp-web (0.0-1) unstable; urgency=low
 
   * Initial release.
