--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+eiskaltdcpp-web (1.0.1-2~bpo10+1) buster-backports; urgency=medium
+
+  * Rebuild for buster-backports.
+  * Decrease debhelper-compat version to 12 (was 13).
+
+ -- Boris Pek <tehnick@debian.org>  Thu, 28 Jan 2021 02:33:47 +0300
+
 eiskaltdcpp-web (1.0.1-2) unstable; urgency=medium
 
   * Move to unstable: no changes required.
